# atlas-design-pattern-januar-2025

./: README.md
Tag1_01Dekorator/: CMakeLists.txt  main.cpp
Tag1_01Dekorator/client/: Client.h
Tag1_01Dekorator/math/: Calculator.h  CalculatorFactory.h  CalculatorImpl.h  CalculatorLogger.h  CalculatorSecure.h
Tag1_03FlyWeight/: AttributedCharacter.h  CMakeLists.txt  main.cpp
Tag1_04Visitor/: CMakeLists.txt  main.cpp
Tag1_04Visitor/firma/: Firma.h
Tag1_04Visitor/mitarbeiter/: AbstractMitarbeiter.h  GehaltsEmpfaenger.h  LohnEmpfaenger.h
Tag1_05State/: CMakeLists.txt  FrontController.cpp  FrontController.h
Tag1_05State/state/: AbstractState.h  State.h  StateA.h  StateB.h
Tag1_06TrafficLight/: CMakeLists.txt
Tag1_06TrafficLight/trafficLight/: TrafficLightState.h
Tag2_01Observer/: CMakeLists.txt  main.cpp
Tag2_01Observer/tiere/: Schwein.h  Tier.h
Tag2_02Command/: CMakeLists.txt  main.cpp
Tag2_02Command/command/: AbstractCommand.h  AddCommand.h  ClearCommand.h  CommandFactory.h  CommandHistory.h  PrintCommand.h  SubCommand.h
Tag2_02Command/math/: Calculator.h
Tag2_04Memento/: CMakeLists.txt  main.cpp
Tag2_04Memento/tiere/: Schwein.h  SchweineMemento.h
Tag2_05Template/: CMakeLists.txt  main.cpp
Tag2_05Template/processor/: FileProcessor.h
Tag3_01Composite/: CMakeLists.txt  main.cpp
Tag3_01Composite/composite/: abstract_node.h  leaf.h  node.h
Tag3_01Konto/: CMakeLists.txt  main.cpp
Tag3_01Konto/composite/: Kontogruppe.h  PrintVisitor.h  abstract_node.h
Tag3_03Builder/: CMakeLists.txt  Komplex.cpp  Komplex.h  Person.h  main.cpp
(+7 files in other folders)
